# health_care

./: .gitignore  Dockerfile.local  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0687357273fc_add_chat_history_table.py  0ce6ed674378_add_describe_column_on_news_table.py  386270ae1144_create_intial_tables.py  64bdeaa20f78_add_image_column_on_news_table.py  a4003236f274_update_state_column.py  b41a6e596c37_update_category_table.py  bead1582fc8a_update_order_table.py
health/: main.py
health/api/v1/: account.py  api.py  auth.py  cart.py  category.py  chat_with_admin.py  chat_with_ai.py  news.py  orders.py  product.py  statistics.py
health/app/ws/: messages.py  socket_manager.py  utils.py
health/core/: security.py  settings.py
health/crud/: __init__.py  account.py  base.py  cart.py  category.py  chat_logs.py  news.py  orders.py  product.py
health/models/: __init__.py  account.py  auth.py  cart.py  category.py  chat_logs.py  news.py  oders.py  products.py
health/schemas/: base.py  cart.py  category.py  chats.py  news.py  orders.py  product.py
health/shared/: core_type.py  database.py  file_operator.py  mail_sender.py
health/tools/: deps.py
