[tool.poetry]
name = "matching-app-be"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "^0.80.0"
SQLAlchemy = "^1.4.17"
mysqlclient = "^2.0.3"
python-dotenv = "^0.17.1"
#uvicorn = "^0.18.0"
uvicorn = "^0.23.2"
requests = "^2.25.1"
emails = "^0.6"
injector = "^0.18.4"
python-multipart = "^0.0.5"
python-dateutil = "^2.8.2"
alembic = "^1.6.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.9.0"}
bcrypt = "^3.2.0"
PyMySQL = "^1.0.2"
fastapi-jwt-auth = "^0.5.0"
Faker = "^15.0.0"
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.5.1"
sqlmodel = "^0.0.8"
fastapi-sso = "^0.7.2"
python-slugify = "^8.0.1"
pillow = "9.5.0"
requests-oauthlib = "^1.3.1"
python-socketio = "^5.9.0"
websocket = "^0.2.1"
google-auth = "^2.23.0"
fastapi-mail = "1.1.1"
blinker = "^1.7.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sqlacodegen = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target_version = ['py39', 'py310']
line-length = 88
skip_string_normalization = true
include = '\.pyi?$'
